New items automatically pop up when creating/editing entries

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -10,7 +10,7 @@
       </ul>
     </div>
   <% end %>
-
+  <%= f.hidden_field :entry_id %>
   <div class="field">
     <%= f.text_area :content, :class => "fill_div item_font" %>
   </div>
