--- a/app/views/entries/_entry_summary.html.erb
+++ b/app/views/entries/_entry_summary.html.erb
@@ -1,6 +1,7 @@
   <div class="entry_summary round">
-    <span class="entry_date">Entry Date:</span>
-    <%= entry_date entry_summary.entry_date %> 
+    <span class="entry_date">
+      <%= entry_date entry_summary.entry_date %> 
+    </span>
     <%= link_to 'Edit Entry', edit_entry_path(entry_summary), %><br />
     <%= entry_summary.items.first.content unless entry_summary.items.empty? %>
   </div>
