--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,7 +1,8 @@
 <h1>Editing entry</h1>
 
-<%= render 'entries/form' %>
+<%= render 'entries/form', :entry => @entry %>
 <br />
+
 <%= render @entry.items %>
 
 <%= link_to 'Back', user_path(current_user) %>
