--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,6 @@
 <div class="item round">
   <% if !@item_to_edit.nil? && (item.id == @item_to_edit.id) -%>
-    <%= render 'form', :item => item %>
+    <%= render 'items/form', :item => @item_to_edit %>
   <% else -%>
     <div class="item_content"><%= link_to item.content, edit_item_path(item), :class=>"nolink" %></div>
     <div class="item_action">
