--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,8 +5,11 @@
     <%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
     <%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
     <!--[if lt IE 8]><%= stylesheet_link_tag 'blueprint/ie' %><![endif]-->
+    <%= stylesheet_link_tag "jquery-ui-1.8.16.custom.css" %>
     <%= stylesheet_link_tag 'custom', :media => 'screen' %>
-    <%= javascript_include_tag :defaults %>
+
+    <%= javascript_include_tag "jquery.min.js", "jquery-ui-1.8.16.custom.min.js", "jquery_ujs.js", "application" %>
+
     <%= csrf_meta_tag %>
   </head>
   <body>
