--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,12 +1,14 @@
 <div class="item round">
-  <% #if !@item_to_edit.nil? && (item.id == @item_to_edit.id) -%>
+  <% if item == @item_anchor -%>
+    <a name="item_anchor"></a>
+  <% end -%>
   <% if item.is_draft? -%>
     <%= render 'items/form', :item => item %>
   <% else -%>
-    <div class="item_content"><%= link_to item.content, edit_item_path(item), :class=>"nolink" %></div>
+    <div class="item_content"><%= link_to simple_format(item.content), edit_item_path(item, :anchor => "item_anchor"), :class => "nolink" %></div>
     <div class="item_action">
       <span class="button round">
-        <%= link_to 'X', item, :confirm => 'Are you sure?', :method => :delete, :class => "nolink" %>
+        <%= link_to 'X', item_path(item, :anchor => "item_anchor"), :confirm => 'Are you sure?', :method => :delete, :class => "nolink" %>
       </span>
     </div>
   <% end -%>
