--- a/app/views/entries/_form.html.erb
+++ b/app/views/entries/_form.html.erb
@@ -12,9 +12,13 @@
   <% end %>
 
   <div class="field">
+    <%= f.label "Entry tags:" %><br />
+    <%= f.text_field :tag_list, :value => @entry.tag_list.sort.to_s, :class => "entry_tag_list" %>
+  </div>
+  <div class="field">
     <%= f.text_field :entry_date, :value => (entry_date @entry.entry_date) %>
   </div>
   <div class="actions">
-    <%= f.submit 'Save date' %>
+    <%= f.submit 'Save changes to Entry' %>
   </div>
 <% end %>
